# 2048Bitboard

./: .gitignore  CMakeLists.txt  Evaluator.cpp  Evaluator.h  GameBoard.cpp  GameBoard.h  HumanPlayer.h  LegalPlayer.h  main.cpp  ncurses_stream.h  system.cpp  system.h
